@@ -8,6 +8,7 @@
 # Copyright 2008 Thomas L. Kula <kula@tproa.net>
 # Copyright 2008, 2011, 2012
 #     The Board of Trustees of the Leland Stanford Junior University
+# Copyright 2014 Russ Allbery <eagle@eyrie.org>
 #
 # Permission to use, copy, modify, and distribute this software and its
 # documentation for any purpose and without fee is hereby granted, provided
@@ -38,10 +39,7 @@ import _remctl
 
 class RemctlError(Exception):
     """The underlying remctl library has returned an error."""
-    def __init__(self, value):
-        self.value = value
-    def __str__(self):
-        return str(self.value)
+    pass
 
 class RemctlProtocolError(RemctlError):
     """A remctl protocol error occurred.
